syntax = "proto3";

package core;

option go_package = "./core";

// base message
message Empty {}

message IDReq {
  uint64 id = 1;
}

message IDsReq {
  repeated uint64 ids = 1;
}

message UUIDReq {
  string uuid = 1;
}

message BaseResp {
  string msg = 1;
}

message PageInfoReq {
  uint64 page = 1;
  uint64 page_size = 2;
}

// tenant message
message CreateOrUpdateTenantReq {
  string uuid = 1;
  string pid = 2;
  string name = 3;
  string account = 4;
  string start_time = 5;
  string end_time = 6; 
  string contact = 7;
  string mobile = 8;
  string sort_no = 9;
}

// user message

message LoginReq {
  string tenant_account = 1;
  string username = 2;
  string password = 3;
}

message LoginResp {
  string tid = 1;
  string uid = 2;
  string role_name = 3;
  string role_value = 4;
  uint64 role_id = 5;
}

message ChangePasswordReq {
  string tenant_uuid = 1;
  string user_uuid = 2;
  string old_password = 3;
  string new_password = 4;
}

message CreateOrUpdateUserReq {
  uint64 id = 1;
  string avatar = 2;
  uint64 role_id = 3;
  string mobile = 4;
  string email = 5;
  uint64 status = 6;
  string username = 7;
  string nickname = 8;
  string password = 9;
}

message TenantInfo {
  string tenant_id = 1;
  string tenant_name = 2;
}

message UserInfoResp {
  uint64 id = 1;
  string avatar = 2;
  uint64 role_id = 3;
  string mobile = 4;
  string email = 5;
  uint64 status = 6;
  string username = 7;
  string uuid = 8;
  string nickname = 9;
  string roleName = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
  string roleValue = 13;
  repeated TenantInfo tenants = 14;
}

message UserListResp {
  uint64 total = 1;
  repeated UserInfoResp data = 2;
}

message GetUserListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string username = 3;
  string nickname = 4;
  string email = 5;
  string mobile = 6;
  uint64 role_id = 7;
}

message UpdateProfileReq {
  string uuid = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
  string avatar = 5;
}

// menu messages

message CreateOrUpdateMenuReq {
  uint32 level = 1;
  uint64 parent_id = 2;
  string path = 3;
  string name = 4;
  string redirect = 5;
  string component = 6;
  uint32 order_no = 7;
  bool disabled = 8;
  Meta meta = 9;
  uint64 id = 10;
  uint32 menu_type = 11;
}

message MenuInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  uint32 level = 4;
  uint64 parent_id = 5;
  string path = 6;
  string name = 7;
  string redirect = 8;
  string component = 9;
  uint32 order_no = 10;
  bool disabled = 11;
  Meta meta = 12;
  repeated MenuInfo children = 13;
  uint32 menu_type = 14;
}

message Meta {
  string title = 1;
  string icon = 2;
  bool hide_menu = 3;
  bool hide_breadcrumb = 4;
  string current_active_menu = 5;
  bool ignore_keep_alive = 6;
  bool hide_tab = 7;
  string frame_src = 8;
  bool carry_param = 9;
  bool hide_children_in_menu = 10;
  bool affix = 11;
  uint32 dynamic_level = 12;
  string real_path = 13;
}

message MenuInfoList {
  uint64 total = 1;
  repeated MenuInfo data = 2;
}

message MenuRoleInfo {
  uint64 id = 1;
  uint64 menu_id = 2;
  uint64 role_id = 3;
}

message MenuRoleListResp {
  uint64 total = 1;
  repeated MenuRoleInfo data = 2;
}

message CreateOrUpdateMenuParamReq {
  uint64 id = 1;
  uint64 menu_id = 2;
  string type = 3;
  string key = 4;
  string value = 5;
}

message MenuParamResp {
  uint64 id = 1;
  string type = 3;
  string key = 4;
  string value = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message MenuParamListResp {
  uint64 total = 1;
  repeated MenuParamResp data = 2;
}

// role messages

message RoleInfo {
  uint64 id = 1;
  string name = 2;
  string value = 3;
  string default_router = 4;
  uint64 status = 5;
  string remark = 6;
  uint32 order_no = 7;
  int64 createdAt = 8;
}

message RoleListResp {
  uint64 total = 1;
  repeated RoleInfo data = 2;
}

message StatusCodeReq {
  uint64 id = 1;
  uint64 status = 2;
}

// casbin
message UpdatePolicyReq {
  uint64 role_id = 1;
  repeated PolicyPartInfo rules = 2;
}

message PolicyPartInfo {
  string path = 1;
  string method = 2;
}

message CreatePolicyReq {
  uint64 role_id = 1;
  PolicyPartInfo info = 2;
}

// api message
message ApiInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string path = 4;
  string description = 5;
  string group = 6;
  string method = 7;
}

message ApiListResp {
  uint64 total = 1;
  repeated ApiInfo data = 2;
}

message ApiPageReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string path = 3;
  string description = 4;
  string method = 5;
  string group = 6;
}

// authorization message
message RoleMenuAuthorityReq {
  uint64 role_id = 1;
  repeated uint64 menu_id = 2;
}
// return the role's authorization menu's ids
message RoleMenuAuthorityResp {
  repeated uint64 menu_id = 1;
}

// dictionary message
message DictionaryInfo {
  uint64 id = 1;
  string title = 2;
  string name = 3;
  uint64 status = 4;
  string desc = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message DictionaryDetail {
  uint64 id = 1;
  string title = 2;
  string key = 3;
  string value = 4;
  uint64 status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  uint64 dictionary_id = 8;
}

message DictionaryList {
  uint64 total = 1;
  repeated DictionaryInfo data = 2;
}

message DictionaryDetailList {
  uint64 total = 1;
  repeated DictionaryDetail data = 2;
}

message DictionaryDetailReq {
  string name = 1;
}

message DictionaryPageReq {
  string title = 1;
  string name = 2;
  uint64 page = 3;
  uint64 page_size = 4;
}

// oauth message
message OauthLoginReq {
  string state = 1;
  string provider = 2;
}

message OauthRedirectResp {
  string url = 1;
}

message ProviderInfo {
  uint64 id = 1;
  string name = 2;
  string client_id = 3;
  string client_secret = 4;
  string redirect_url = 5;
  string scopes = 6;
  string auth_url = 7;
  string token_url = 8;
  uint64 auth_style = 9;
  string info_url = 10;
  int64  created_at = 11;
  int64  updated_at = 12;
}

message ProviderListResp {
  uint64 total = 1;
  repeated ProviderInfo data = 2;
}

message CallbackReq {
  string state = 1;
  string code = 2;
}

// JWT message

message TokenInfo {
  uint64 id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string uuid = 4;
  string token = 5;
  string source = 6;
  uint64 status = 7;
  int64 expired_at = 8;
}

message TokenListResp {
  uint64 total = 1;
  repeated TokenInfo data = 2;
}

message TokenListReq {
  uint64 page = 1;
  uint64 page_size = 2;
  string username = 3;
  string nickname = 4;
  string email = 5;
  string uuid = 6;
}

// service
service core {
  // init

  // group: base
  rpc initDatabase (Empty) returns (BaseResp);

  // group: tenant
  rpc CreateOrUpdateTenant (CreateOrUpdateTenantReq) returns (BaseResp);

  // user management

  // group: user
  rpc login(LoginReq) returns (LoginResp);
  // group: user
  rpc changePassword (ChangePasswordReq) returns (BaseResp);
  // group: user
  rpc createOrUpdateUser (CreateOrUpdateUserReq) returns (BaseResp);
  // group: user
  rpc getUserById (UUIDReq) returns (UserInfoResp);
  // group: user
  rpc getUserList (GetUserListReq) returns (UserListResp);
  // group: user
  rpc deleteUser (IDReq) returns (BaseResp);
  // group: user
  rpc batchDeleteUser (IDsReq) returns (BaseResp);
  // group: user
  rpc updateProfile (UpdateProfileReq) returns (BaseResp);
  // group: user
  rpc updateUserStatus (StatusCodeReq) returns (BaseResp);

  //menu management

  // group: menu
  rpc createOrUpdateMenu (CreateOrUpdateMenuReq) returns (BaseResp);
  // group: menu
  rpc deleteMenu (IDReq) returns (BaseResp);
  // group: menu
  rpc getMenuListByRole (IDReq) returns (MenuInfoList);
  // group: menu
  rpc getMenuList (PageInfoReq) returns (MenuInfoList);
  // group: menu
  rpc createOrUpdateMenuParam (CreateOrUpdateMenuParamReq) returns (BaseResp);
  // group: menu
  rpc deleteMenuParam (IDReq) returns (BaseResp);
  // group: menu
  rpc getMenuParamListByMenuId (IDReq) returns (MenuParamListResp);

  // role service

  // group: role
  rpc createOrUpdateRole (RoleInfo) returns (BaseResp);
  // group: role
  rpc deleteRole (IDReq) returns (BaseResp);
  // group: role
  rpc getRoleById (IDReq) returns (RoleInfo);
  // group: role
  rpc getRoleList (PageInfoReq) returns (RoleListResp);
  // group: role
  rpc updateRoleStatus (StatusCodeReq) returns (BaseResp);

  // api management service

  // group: api
  rpc createOrUpdateApi (ApiInfo) returns (BaseResp);
  // group: api
  rpc deleteApi (IDReq) returns (BaseResp);
  // group: api
  rpc getApiList (ApiPageReq) returns (ApiListResp);

  // authorization management service

  // group: authority
  rpc getMenuAuthority (IDReq) returns (RoleMenuAuthorityResp);
  // group: authority
  rpc createOrUpdateMenuAuthority (RoleMenuAuthorityReq) returns (BaseResp);

  // dictionary management service

  // group: dictionary
  rpc createOrUpdateDictionary (DictionaryInfo) returns (BaseResp);
  // group: dictionary
  rpc deleteDictionary (IDReq) returns (BaseResp);
  // group: dictionary
  rpc getDictionaryList (DictionaryPageReq) returns (DictionaryList);
  // group: dictionary
  rpc getDetailByDictionaryName (DictionaryDetailReq) returns (DictionaryDetailList);
  // group: dictionary
  rpc createOrUpdateDictionaryDetail (DictionaryDetail) returns (BaseResp);
  // group: dictionary
  rpc deleteDictionaryDetail (IDReq) returns (BaseResp);

  // oauth management

  // group: oauth
  rpc createOrUpdateProvider (ProviderInfo) returns (BaseResp);
  // group: oauth
  rpc deleteProvider (IDReq) returns (BaseResp);
  // group: oauth
  rpc getProviderList (PageInfoReq) returns (ProviderListResp);
  // group: oauth
  rpc oauthLogin (OauthLoginReq) returns (OauthRedirectResp);
  // group: oauth
  rpc oauthCallback (CallbackReq) returns (LoginResp);

  // Token management

  // group: token
  rpc createOrUpdateToken (TokenInfo) returns (BaseResp);
  // group: token
  rpc deleteToken (IDReq) returns (BaseResp);
  // group: token
  rpc batchDeleteToken (IDsReq) returns (BaseResp);
  // group: token
  rpc getTokenList (TokenListReq) returns (TokenListResp);
  // group: token
  rpc updateTokenStatus (StatusCodeReq) returns (BaseResp);
  // group: token
  rpc blockUserAllToken (UUIDReq) returns (BaseResp);
}